amun/base/deploymentconfig.yaml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: amun-api
spec:
  replicas: 1
  selector:
    service: amun-api
    app.kubernetes.io/name: thoth
    app.kubernetes.io/component: amun
    app.kubernetes.io/managed-by: aicoe-thoth-devops
  template:
    metadata:
      labels:
        service: amun-api
        app.kubernetes.io/name: thoth
        app.kubernetes.io/component: amun
        app.kubernetes.io/managed-by: aicoe-thoth-devops
    spec:
      serviceAccountName: amun-api
      containers:
        - name: amun-api
          image: amun-api:latest
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: "384Mi"
              cpu: "200m"
            limits:
              memory: "384Mi"
              cpu: "200m"
          readinessProbe:
            httpGet:
              path: "/readiness"
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 10
          livenessProbe:
            httpGet:
              path: "/liveness"
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 60
            timeoutSeconds: 10
  test: false
