amun/base/route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: amun-api
spec:
  to:
    kind: Service
    name: amun-api
